--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon ./src/app.js",
+    "dev": "nodemon --quiet ./src/app.js",
     "start": "node ./src/app.js"
   },
   "keywords": [],
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "mongodb": "5.7.0"
   }
 }
