--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon ./src/app.js",
-    "start": "node ./src/app.js"
+    "start": "node ./src/app.js",
+    "tsc": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
     "mongodb": "5.7.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "reflect-metadata": "0.1.13",
+    "typescript": "5.1.6"
   }
 }
