--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
+    "express-routes-versioning": "^1.0.1",
     "mongodb": "5.7.0",
     "nodemon": "^3.0.1"
   },
